# enara-lighting-inventory

./: .gitignore  README.md  capacitor.config.ts  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.desktop.config.ts
.github/workflows/: deploy-pages.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/java/com/enara/inventory/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PwaInstallPrompt.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx
src/contexts/: AuthContext.tsx
src/lib/: dataManagement.ts  reportExports.ts
src/pages/: AdminDashboard.tsx  Login.tsx  UserDashboard.tsx
